 syntax = "proto3";

 option java_package="org.example.stubs";

 service BankService {
   // Unary mode for currency conversion
   rpc convert (ConvertCurrencyRequest) returns (ConvertCurrencyResponse);

   // Server streaming model for getting currency responses
   rpc getCurrencyStream (ConvertCurrencyRequest) returns (stream ConvertCurrencyResponse);

   // Client streaming model for sending currency requests
   rpc performStream (stream ConvertCurrencyRequest) returns (ConvertCurrencyResponse);

   // Bidirectional streaming model for currency conversion
   rpc fullCurrencyStream (stream ConvertCurrencyRequest) returns (stream ConvertCurrencyResponse);
 }

 message ConvertCurrencyRequest {
   string currencyFrom = 1;
   string currencyTo = 2;
   double amount = 3;
 }

 message ConvertCurrencyResponse {
   string currencyFrom = 1;
   string currencyTo = 2;
   double amount = 3;
   double result = 4;
 }